--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title_separator          : "-"
 subtitle                 : "Die gesellige Schweizer Zero City Allianz"
 name                     : "El Jefe"
 description              : "Informationen zu Zero City: Zombie Survival"
-url                      : "https://github.com/ht201"
+url                      : "https://github.com/el-Negroooar"
 baseurl                  : "/swiss-knights-z"
 repository               : "ht201/swiss-knights-z"
 teaser                   : "/assets/images/zero-city-official-image.jpg"
