--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ title_separator          : "-"
 subtitle                 : "Die gesellige Schweizer Zero City Allianz"
 name                     : "El Jefe"
 description              : "Informationen zu Zero City: Zombie Survival"
-url                      : "https://github.com/el-Negroooar"
+url                      : "https://github.com/el-negroooar"
 baseurl                  : "/swiss-knights-z"
-repository               : "ht201/swiss-knights-z"
+repository               : "el-negroooar/swiss-knights-z"
 teaser                   : "/assets/images/zero-city-official-image.jpg"
 logo                     : "/assets/images/logo.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -19,7 +19,7 @@ words_per_minute         : 200
 atom_feed:
   path                   : # blank (default) uses feed.xml
 og_image                 : "/assets/images/logo.jpg"
-ht201                    : "https://ht201.github.io/swiss-knights-z"
+ht201                    : "https://el-negroooar.github.io/swiss-knights-z"
 
 # Site Author
 author:
