--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: " :chart_with_upwards_trend: Allianz"
+  - title: ":busts_in_silhouette: Allianz"
     url: /about/
   - title: ":eyes: Allgemeines"
     url: /general/
