--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ words_per_minute         : 200
 atom_feed:
   path                   : # blank (default) uses feed.xml
 og_image                 : "/assets/images/logo.jpg"
-el-negroooar             : "https://el-negroooar.github.io/swiss-knights-z"
+el-negroooar             : "https://el-negroooar.github.io/"
 
 # Site Author
 author:
