--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ el-negroooar             : "https://el-negroooar.github.io/swiss-knights-z"
 
 # Site Author
 author:
-  name             : "El Jefe"
+  name             : "Nobody"
   bio              : "I am Legend"
   location         : "Schweiz"
 
