--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme             : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "bright"
+minimal_mistakes_skin    : "dark"
 
 # Site Settings
 locale                   : "ch-DE"
